--- a/src/apps/dashboard-account/AccountPreferences.css
+++ b/src/apps/dashboard-account/AccountPreferences.css
@@ -1,3 +1,16 @@
 .dashboard-account-preferences {
-  
+  font-size: var(--font-small);
+}
+
+.dashboard-account-preferences .field {
+  margin: 0.6em 0;
+}
+
+.dashboard-account-preferences .field label {
+  display: inline-block;
+  width: 120px;
+}
+
+.dashboard-account-preferences .field input {
+  width: 320px;
 }
