--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -4,7 +4,7 @@
 @import './breadcrumbs/index.css';
 @import './button/index.css';
 @import './dropdown/index.css';
-@import './input/index.css';
+@import './form/index.css';
 @import './mixins/index.css';
 @import './toast/index.css';
 
@@ -178,6 +178,14 @@ a:focus-visible {
 h1 {
   font-family: Poppins;
   font-size: 1.6em;
+  font-weight: 600;
+  margin: 1em 0;
+  padding: 0;
+}
+
+h2 {
+  font-family: Poppins;
+  font-size: 1.25em;
   font-weight: 600;
   margin: 1em 0;
   padding: 0;
