--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -108,8 +108,9 @@
   --orange: #e9b44a;
   
   --gray-900: #202125;
-  --gray-500: #6f7780;
-  --gray-400: #c2c8d0;
+  --gray-600: #6f7780;
+  --gray-500: #818992;
+  --gray-400: #cbd0d7;
   --gray-300: #dce0e4;
   --gray-200: #dfe2e7;
   --gray-100: #e9ecf1;
