--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -31,7 +31,15 @@ a[href].button, a[href].button:hover {
 }
 
 button:disabled {
+  background-color: var(--gray-400);
+  border-color: var(--gray-400);
+  box-shadow: none;
+  color: var(--gray-500);
   cursor: auto;
+}
+
+button:disabled svg {
+  color: var(--gray-500);
 }
 
 button:hover:not(:disabled), a.button:hover {
