Minor tweak due to Netlify build problem

--- a/src/pages/[lang]/projects/[slug]/index.astro
+++ b/src/pages/[lang]/projects/[slug]/index.astro
@@ -44,7 +44,7 @@ if (error) {
 ---
 <ProjectLayout active="home" user={user} project={response.data}>
   <ProjectHome 
-    client:load
+    client:only
     i18n={i18n} 
     project={project} 
     defaultContext={contexts[0]} 
