--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -10,6 +10,29 @@
   outline: none;
 }
 
+.ia-toolbar-container {
+  align-items: center;
+  display: flex;
+}
+
+.ia-toolbar-context {
+  border-radius: 50%;
+  margin: 0 8px;
+  transition: opacity 250ms ease-in-out;
+}
+
+.ia-toolbar-context.hidden {
+  opacity: 0;
+}
+
+.ia-toolbar-context button {
+  border-radius: 50%;
+}
+
+.ia-toolbar-context button svg {
+  color: var(--red-500);
+}
+
 .ia-toolbar {
   align-items: center;
   bottom: 30px;
