--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -46,12 +46,20 @@
   vertical-align: bottom;
 }
 
+.ia-toolbar button svg {
+  color: var(--font-dark);
+}
+
 .ia-toolbar :is(button, a.button) + :is(button, a.button) {
   margin-left: 6px;
 }
 
 .ia-toolbar section {
-  padding: 7px;
+  padding: 6px;
+}
+
+.ia-toolbar section.privacy {
+  padding-left: 0;
 }
 
 .ia-desktop .presence-stack {
