--- a/src/themes/default/dropdown/index.css
+++ b/src/themes/default/dropdown/index.css
@@ -40,8 +40,9 @@
 }
 
 .dropdown-item p {
-  color: var(--gray-600);
+  color: var(--font-light);
   line-height: 150%;
+  margin: 0;
   max-width: 300px;
   padding: 5px 5px 5px 0;
 }
