--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -107,7 +107,7 @@
   --orange: #e9b44a;
   
   --gray-900: #202125;
-  --gray-600: #6f7780;
+  --gray-600: #6f747c; 
   --gray-500: #818992;
   --gray-400: #cbd0d7;
   --gray-300: #dce0e4;
@@ -123,7 +123,7 @@
 
   /** Font styles **/
   --font-dark: var(--gray-900);
-  --font-light: var(--gray-500);
+  --font-light: var(--gray-600);
 
   --font-small: 0.875em;
   --font-tiny: 13px;
