--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -17,7 +17,7 @@
 
 .ia-toolbar-context {
   border-radius: 50%;
-  margin: 0 8px;
+  margin: 0 6px;
   transition: opacity 250ms ease-in-out;
 }
 
@@ -29,8 +29,12 @@
   border-radius: 50%;
 }
 
-.ia-toolbar-context button svg {
-  color: var(--red-500);
+.ia-toolbar-context button.delete {
+  background-color: var(--red-500);
+}
+
+.ia-toolbar-context button.delete svg {
+  color: #fff;
 }
 
 .ia-toolbar {
