--- a/src/themes/default/avatar/index.css
+++ b/src/themes/default/avatar/index.css
@@ -1,17 +1,18 @@
 .avatar {
   border-radius: 50%;
-  display: inline-block;
+  display: block;
   position:relative;
-  height: 34px;
-  width: 34px;
+  height: 36px;
+  width: 36px;
 }
 
 .avatar-image,
 .avatar-fallback {
   align-items: center;
+  background-size: cover;
   border-radius: 50%;
   border-style: solid;
-  border-width: 1px;
+  border-width: 3px;
   box-sizing: border-box;
   color: #fff;
   display: flex;
