--- a/src/apps/annotation-image/Popup/Popup.css
+++ b/src/apps/annotation-image/Popup/Popup.css
@@ -1,10 +1,11 @@
 .ia-annotation-popup {
   background-color: #fff;
-  border: 1px solid var(--gray-300);
-  border-radius: var(--border-radius);
+  border-radius: 6px;
   box-shadow:
-    0px 0px 12px -8px rgba(0, 0, 0, 0.12),
-    0px 8px 32px -12px rgba(0, 0, 0, 0.28);
+    2.4px 3.9px 3.3px rgba(0, 0, 0, 0.024),
+    6.5px 10.8px 9.1px rgba(0, 0, 0, 0.035),
+    15.7px 25.9px 22px rgba(0, 0, 0, 0.046),
+    52px 86px 73px rgba(0, 0, 0, 0.07);
   cursor: move;
   cursor: grab;
   cursor: -moz-grab;
@@ -12,7 +13,7 @@
   position: absolute;
   pointer-events: all;
   top: 10px;
-  width: 320px;
+  width: 340px;
   --emphasis-light: #ffe0a2;
   --emphasis-dark: #e8c889;
 }
