--- a/src/components/Annotation/Card/Card.css
+++ b/src/components/Annotation/Card/Card.css
@@ -1,3 +1,9 @@
+.annotation-card ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .annotation-card-header {
   padding: 10px;
   position: relative;
@@ -78,4 +84,25 @@
       9999px 0 0 0 var(--anim-color), 
       calc(9999px + var(--anim-h-offset)) 0 0 0 var(--anim-color);
   }
+}
+
+.annotation-card-comments-container {
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.annotation-card-comment {
+  border-bottom: 1px solid var(--gray-100);
+  padding: 10px;
+}
+
+.annotation-card-comment.no-border {
+  border-bottom: none;
+}
+
+.annotation-card-comment p {
+  font-size: var(--font-tiny);
+  line-height: 140%;
+  margin: 0;
+  padding: 14px 4px 0 4px;
 }
