--- a/src/components/Annotation/Interstitial/Interstitial.css
+++ b/src/components/Annotation/Interstitial/Interstitial.css
@@ -2,8 +2,9 @@
   align-items: center;
   display: flex;
   font-size: 13px;
+  height: 0;
   justify-content: center;
-  margin: 0.5em 0;
+  margin: 0;
   position: relative;
 }
 
