Major refactoring of the annotation popup + private annotation feature

--- a/src/apps/annotation-image/Popup/Popup.css
+++ b/src/apps/annotation-image/Popup/Popup.css
@@ -14,8 +14,9 @@
   pointer-events: all;
   top: 10px;
   width: 340px;
-  --emphasis-light: #ffe0a2;
-  --emphasis-dark: #e8c889;
+}
+.annotation-card.private {
+  border-radius: 6px;
 }
 
 .ia-annotation-popup > ul {
