--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -62,6 +62,7 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
     flex-direction: column;
     flex-grow: 1;
     min-height: 100%;
+    position: relative;
   }
 
   header {
