--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -5,3 +5,19 @@
   grid-template-columns: repeat(auto-fill, 180px);
   padding: 70px 0 40px 0;
 }
+
+.project-home-filedrop {
+  align-items: center;
+  background-color: rgba(0, 0, 128, 0.5);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.project-home-filedrop > h1 {
+  color: #fff;
+}
