--- a/src/components/Annotation/Creator/Creator.css
+++ b/src/components/Annotation/Creator/Creator.css
@@ -1,4 +1,4 @@
-.annotation-body-header {
+.annotation-creator {
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -8,26 +8,27 @@
   width: 100%;
 }
 
-.annotation-body-created {
-  margin-left: 3px;
-}
-
-.annotation-body-header .anonymous {
-  color: var(--font-light);
-}
-
-.annotation-body-header .avatar {
+.annotation-creator .avatar {
   margin-right: 10px;
   margin-top: -2px;
 }
 
-.annotation-body-header address {
+.annotation-created-by {
+  margin-left: 3px;
+  flex-grow: 1;
+}
+
+.annotation-created-by .anonymous {
+  color: var(--font-light);
+}
+
+.annotation-creator address {
   font-size: 1em;
   font-style: normal;
   font-weight: 500;
 }
 
-.annotation-body-header time {
+.annotation-creator time {
   color: var(--font-light);
   font-size: 0.875em;
 }
