--- a/src/themes/default/dropdown/index.css
+++ b/src/themes/default/dropdown/index.css
@@ -7,6 +7,7 @@
     0 0 0 1px rgba(0, 0, 0, 0.12),
     0 2px 12px -2px rgba(0, 0, 0, 0.12),
     0 8px 24px -4px rgba(0, 0, 0, 0.08);
+  line-height: 160%;
   min-width: 160px;
   padding: 5px;
 }
