Minor behavior + style tweaks

--- a/src/components/Annotation/ReplyForm/ReplyForm.css
+++ b/src/components/Annotation/ReplyForm/ReplyForm.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+.annotation-reply-form:first-child {
+  border-top: none;
+} 
+
 .annotation-reply-form .avatar {
   position: absolute;
   left: 10px;
