--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -1,3 +1,8 @@
+.project-home {
+  flex-grow: 1;
+  padding: 40px;
+}
+
 .project-home-grid {
   display: grid;
   gap: 1rem;
@@ -16,8 +21,4 @@
   position: absolute;
   top: 0;
   width: 100%;
-}
-
-.project-home-filedrop > h1 {
-  color: #fff;
 }
