--- a/src/pages/[lang]/projects/[slug]/index.astro
+++ b/src/pages/[lang]/projects/[slug]/index.astro
@@ -50,3 +50,14 @@ if (error) {
     defaultContext={contexts[0]} 
     documents={data}/>
 </ProjectLayout>
+
+<style>
+  /**  
+   * Tweak the layout, so we can make the file upload
+   * dropzone extend across the full dashboard area.
+   */
+  :global(.container > main) {
+    padding: 0;
+    display: flex;
+  }
+</style>
