--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -111,6 +111,7 @@ if (document.content_type === 'text/plain') {
     font-size: 17px;
     line-height: 190%;
     padding: 70px 85px 90px 85px;
+    white-space: pre-line;
     width: 70ch;
   }
 
