--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -36,7 +36,8 @@ const [ document, layers ] = response.data;
 
 if (!document || !layers) {
   // https://javascript.plainenglish.io/return-custom-404-responses-in-astro-b844b0e0146d
-  const error = await fetch(`${Astro.url}/500`);
+  const path = Astro.url.protocol + '//' + Astro.url.host;
+  const error = await fetch(`${path}/500`);
   return new Response(error.body, { headers: error.headers, status: 500 }); 
 }
 
