--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -34,10 +34,10 @@
   background-color: #fff; 
   border-radius: var(--border-radius);
   box-shadow:
-    0px 0px 16px -1px rgba(0, 0, 0, 0.05),
-    0px 0px 16px -8px rgba(0, 0, 0, 0.05), 
-    0px 0px 16px -12px rgba(0, 0, 0, 0.12),
-    0px 0px 2px 0px rgba(0, 0, 0, 0.08);
+    0px 0px 16px -1px rgba(0, 0, 0, 0.15),
+    0px 0px 16px -8px rgba(0, 0, 0, 0.25), 
+    0px 0px 16px -12px rgba(0, 0, 0, 0.32),
+    0px 0px 2px 0px rgba(0, 0, 0, 0.28);
   pointer-events: all;
   transition: background-color 250ms;
 }
@@ -70,4 +70,8 @@
   height: 16px;
   margin: 0 8px;
   right: 0; 
+}
+
+.anno-menubar section {
+  padding: 6px;
 }
