--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -3,10 +3,8 @@
 }
 
 .anno-sidepanel.annotation-list .annotation-card {
+  border: 1px solid var(--gray-300);
   border-radius: 6px;
-  box-shadow:
-    0px 0px 3px -2px rgba(0, 0, 0, 0.35),
-    0px 0px 3px rgba(0, 0, 0, 0.08);
   margin: 8px 0;
 }
 
