--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -139,9 +139,11 @@
   --button-background-color: #fff;
   --button-border-color: var(--gray-300);
   --button-border-radius: var(--border-radius);
+  --button-focus-outline-color: rgb(22, 97, 202, 0.2);
   --button-font-color: var(--font-dark);
   --button-hover-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0.1);
   --button-primary-background: var(--bright-blue);
+
 
   /** Inputs **/
   --input-border-color: var(--gray-300);
