--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -1,5 +1,9 @@
 .anno-sidepanel.annotation-list {
-  padding: 2px 10px;
+  height: 100%;
+  list-style-type: none;  
+  margin: 0;
+  overflow-y: auto;
+  padding: 0 8px;
 }
 
 .anno-sidepanel.annotation-list .annotation-card {
@@ -10,4 +14,8 @@
 
 .anno-sidepanel.annotation-list .annotation-card:not(.private) {
   background-color: #fff;
+}
+
+.anno-sidepanel.annotation-list .annotation-card.selected {
+  box-shadow: 0 0 0 3px var(--button-focus-outline-color);
 }
