--- a/src/apps/dashboard-projects/ProjectsHome.css
+++ b/src/apps/dashboard-projects/ProjectsHome.css
@@ -52,3 +52,21 @@
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   padding: 30px 0 40px 0;
 }
+
+.dashboard-projects-notifications {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.dashboard-projects-notifications button {
+  display: flex;
+  padding: 16px 32px;
+}
+
+.dashboard-projects-notifications a,
+.dashboard-projects-notifications a:hover {
+  text-decoration: none;
+}
