IIIF import dialog

--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -2,6 +2,7 @@
 @import './avatar/index.css';
 @import './breadcrumbs/index.css';
 @import './button/index.css';
+@import './dialog/index.css';
 @import './dropdown/index.css';
 @import './form/index.css';
 @import './mixins/index.css';
