--- a/src/layouts/dashboard/DashboardLayout.astro
+++ b/src/layouts/dashboard/DashboardLayout.astro
@@ -2,29 +2,11 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { DashboardSidebar } from './DashboardSidebar';
 import { getTranslations } from '@i18n';
-import { createSupabaseServerClient } from '@backend/supabaseServerClient';
-import { getMyProfile } from '@backend/crud/profiles';
-import { retrievePendingInvites } from '@backend/crud';
 
 const i18n = getTranslations(Astro.request, 'dashboard-sidebar');
-
-const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
-if (!supabase)
-  return Astro.redirect(`/${i18n.lang}/sign-in`);
-
-const { error, data } = await getMyProfile(supabase);
-
-if (error) { 
-  const error = await fetch(`${Astro.url}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
-}
-
-// note we are passing the email in for now, but once RLS is set up on invites table that shouldn't actually be necessary I think?
-// also this should probably not be managed here, since many different components might want to see this number...
-const pending = await retrievePendingInvites(supabase, data.email)
 ---
 <BaseLayout title="Dashboard">	
-  <DashboardSidebar client:load i18n={i18n} pending={pending ? pending : 0}/>
+  <DashboardSidebar client:load i18n={i18n}/>
 
   <div class="container">
     <slot />
