incorporated database updates

--- a/src/pages/[lang]/projects/[slug]/collaboration.astro
+++ b/src/pages/[lang]/projects/[slug]/collaboration.astro
@@ -30,6 +30,7 @@ const response = await getProject(supabase, projectId as string);
         client:load
         i18n={i18n}
         project={response.data}
+        user={user}
         />
   )}
 </ProjectLayout>
