--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -112,7 +112,7 @@
   --gray-600: #6f747c; 
   --gray-500: #818992;
   --gray-400: #cbd0d7;
-  --gray-300: #dce0e4;
+  --gray-300: #dadee2;
   --gray-200: #dfe2e7;
   --gray-100: #e9ecf1;
   --gray-50: #f6f7f9;
